Tale's JSFX Pack

v20150215 (15 February 2015)

 + drum_synth: Improved low/mid/high tom sound.
 + drum_synth: Optimised drive algorithm, non-multichannel output.
 + wavetable_synth: Extended filter Q range.
 + wavetable_synth: Implemented tuning.

v20150208 (8 February 2015)

 + drum_synth: Added simple drum synth (GM compatible, although incomplete).
 + wavetable_synth: Added paraphonic wavetable synth (work in progress).
 + Improved NSIS installer (added sections, formatted license/changelog).

v20150118 (18 January 2015)

 + colored_noise: Added LP/BP/HP filter.

v20141223 (23 December 2014)

 + mono_synth: Workaround for last touched parameter bug.

v20141220 (20 December 2014)

 + adsr: Fixed instant (0 ms) attack.
 + adsr: Removed sustain -120 dB lower limit.
 + adsr: Don't revert to decay when updating sustain.
 + Added destination folder already exists warning to installer.

v20141212 (12 December 2014)

 + mono_synth: Added mono/poly mode (16 notes max).
 + mono_synth: Added LFO (PWM on PW waveforms, FM otherwise).
 + mono_synth: Added modified square, pulse-width trapezoid/triangular pulse
   waveforms.
 + mono_synth: Added velocity control.
 + mono_synth: Fixed instant (0 ms) attack.
 + poly_mono_midi_router: Added MIDI note router.
 + midi_sustain: Added MIDI sustain emulator.
 + colored_noise: Added coloured noise generator.
 + sin: Added efficient sine/cosine wave oscillator lib
   (sine_oscillator.jsfx-inc).
 + midiq: Split up msg23 into msg2 and msg3.
 + midiq: Added channel and status byte filters to midiq_collect().
 + midiq: Made midiq_init() buffer size optional.
 + poly: Replaced leaky integrator with polyBLAMP.
 + poly: Optimised high-frequency fade out.
 + poly/lfo: Added variable pulse width trapezoid, modified square.
 + poly/lfo: Removed automatic set default pulse width (fixes/adds zero
   pulse width support).
 + lfo: Added sample and hold waveform.
 + lcg: Added grey, black noise.
 + adsr: Improved accuracy when scale != 1.0.