@@ -9,6 +9,17 @@ double circ(double t, int k, int n, double)
 	return k & 1 ? 4 * j1(M_PI * (2*k - 1)) * sin(2*M_PI * k * t) / k * sigma(k, n) : 0;
 }
 
+double combo(double t, int k, int n, double num)
+{
+	int m = 0, inum = (int)num;
+	for (int i = 0; i < inum && !m; ++i)
+	{
+		int j = 1 << i;
+		if ((k & (2*j - 1)) == j) m = j;
+	}
+	return m ? 4/(inum*M_PI) * sin(2*M_PI * k * t) / k * m * sigma(k, n) : 0;
+}
+
 double full(double t, int k, int n, double)
 {
 	double dc = 4/M_PI - 1;
@@ -21,9 +32,29 @@ double half(double t, int k, int n, double)
 	return dc/n + (k == 1 ? sin(2*M_PI * t) : k & 1 ? 0 : -4/M_PI * cos(2*M_PI * k * t) / (k*k - 1)) * sigma(k, n);
 }
 
-double ham(double t, int k, int n, double)
+double ham(double t, int k, int n, double num)
 {
-	return k <= 3 ? 0.4 * sin(2*M_PI * k * t) * sigma(k, n) : 0;
+	int inum = (int)num;
+	switch (inum)
+	{
+		case 1: case 2: case 3: case 4: if (k > inum) return 0; break;
+		case 5: case 6: case 7: case 8: if (k > 4 && (k & 1 || k > 4 + 2 * (inum - 4))) return 0; break;
+		default: case 9: if (k > 4 && (k & 1 || k > 12) && k != 16) return 0; break;
+	}
+	double a = 0;
+	switch (inum)
+	{
+		case 1: a = 1; break;
+		case 2: a = 0.568134086134179594473891938833; break;
+		case 3: a = /* 0.400084401888847696060480529923 */ 0.4; break;
+		case 4: a = 0.309382307569317671624986587631; break;
+		case 5: a = 0.268382163704272314053156378577; break;
+		case 6: a = 0.236287471015808936414259733283; break;
+		case 7: a = 0.208586523765622755544058009036; break;
+		case 8: a = 0.18534593451986317025337314135; break;
+		default: case 9: a = 0.172410339992880773385408588183; break;
+	}
+	return a * sin(2*M_PI * k * t) * sigma(k, n);
 }
 
 double lpsqr(double t, int k, int n, double fc)
@@ -42,7 +73,7 @@ double rect(double t, int k, int n, double pw)
 
 double saw(double t, int k, int n, double)
 {
-	return -2/M_PI * sin(2*M_PI * k * (t + 0.5)) / k * sigma(k, n);
+	return -2/M_PI * sin(2*M_PI * k * t) / k * sigma(k, n);
 }
 
 double sine(double t, int k, int n, double)
@@ -99,10 +130,12 @@ int main()
 	bool ok = true;
 
 	ok &= gen_wavetbl("Circle.wav", circ);
+	ok &= gen_wavetbl("Combo Organ.wav", combo, 3);
 	ok &= gen_wavetbl("Filtered Square.wav", lpsqr, M_SQRT2);
+	ok &= gen_wavetbl("Full Organ.wav", ham, 9);
 	ok &= gen_wavetbl("Full-Wave Rectified Sine.wav", full);
 	ok &= gen_wavetbl("Half-Wave Rectified Sine.wav", half);
-	ok &= gen_wavetbl("Hammond.wav", ham);
+	ok &= gen_wavetbl("Hammond.wav", ham, 3);
 	ok &= gen_wavetbl("Modified Square.wav", sqr2, 0.25);
 	ok &= gen_wavetbl("Modified Triangle.wav", tri2, 0.3);
 	ok &= gen_wavetbl("Narrow Pulse.wav", rect, 0.1);
